<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="in.twister.blood_donate.fragment.DetailsFragment"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_details_of_receiver"
        style="@style/profile_detail"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:textColorHint="@android:color/holo_red_dark">
        <EditText
            android:id="@+id/receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txt_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:textColorHint="@android:color/holo_red_dark">
        <EditText
                android:id="@+id/receiver_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_contact_no"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/txt_bloodgrp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/receiver_bloodgrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_one"
            android:textSize="21sp"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_find_donor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        style="@style/auth_btn"
        android:text="@string/btn_find_donor"/>
</LinearLayout>
