<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.twister.blood_donate.ForgetPwdActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:textColorHint="@android:color/holo_red_dark">
                <EditText
                    android:id="@+id/verification_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_verification_id"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_send_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/btn_send_otp"
                style="@style/auth_btn"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/block_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    android:textColorHint="@android:color/holo_red_dark">
                    <EditText
                        android:id="@+id/verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_verification"
                        android:layout_marginTop="25dp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    android:textColorHint="@android:color/holo_red_dark">
                    <in.anshul.libray.PasswordEditText
                        android:id="@+id/new_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_new_password"
                        android:layout_marginTop="10dp"
                        app:hide_drawable="@drawable/icon_hide_pwd"
                        app:show_drawable="@drawable/icon_show_pwd"
                        app:password_visible="false"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    android:textColorHint="@android:color/holo_red_dark">
                    <in.anshul.libray.PasswordEditText
                        android:id="@+id/new_pwd_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_new_password_again"
                        android:layout_marginTop="10dp"
                        app:hide_drawable="@drawable/icon_hide_pwd"
                        app:show_drawable="@drawable/icon_show_pwd"
                        app:password_visible="false"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btn_change_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/btn_change_pwd"
                    style="@style/auth_btn"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
