<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="in.twister.blood_donate.fragment.SettingFragment"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/holo_red_dark"
        android:padding="10dp"
        app:cardCornerRadius="10dp">
        <Switch
            android:id="@+id/user_isdonor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/setting_txt_donating_blood"
            android:textColor="#FFF"
            android:textOff="@string/option_no"
            android:textOn="@string/option_yes"
            android:textSize="25sp" />
    </android.support.v7.widget.CardView>

    <!--android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/holo_red_dark"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_language"
                android:textColor="#FFF"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="25sp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:layout_gravity="center" />
        </LinearLayout>
    </android.support.v7.widget.CardView-->
</LinearLayout>
